# system_monitor

./: .gitignore  README.md  pyproject.toml
application/: __init__.py  app.py
application/core/: __init__.py  info_manager.py  metrics_collector.py  metrics_updater.py  process_collector.py  process_manager.py
application/providers/: __init__.py  gpu_provider.py
application/ui/: __init__.py  basic_tabs_builder.py  chart_factory.py  cpu_tab_builder.py  dashboard_builder.py  event_handlers.py  gpu_tab_builder.py  process_tab_builder.py  toolbar_builder.py
application/utils/: __init__.py  cache.py  system_info.py  theme.py
application/widgets/: __init__.py  metric_card.py  time_series_chart.py
tests/: test_core_metrics_collector.py  test_core_metrics_updater.py  test_core_process_manager.py  test_integration.py  test_providers_gpu_provider.py  test_utils_cache.py  test_utils_theme.py
