[project]
name = "system-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.2",
    "psutil>=5.9",
    "nvidia-ml-py>=13.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["application"]

[project.scripts]
system-monitor = "application.app:main"
